--- a/main.css
+++ b/main.css
@@ -8,6 +8,29 @@ img {
 	float: right;
 }
 
+.nav li {
+	padding-top: 16px;
+	padding-bottom: 16px;
+	list-style: none;
+}
+
+.nav li a {
+	padding-bottom: 6px;
+	border-bottom: 2px solid #197575;
+	color: black;
+	letter-spacing: 2px;
+	-webkit-transition: border-bottom 1s ease-out;
+    -moz-transition: border-bottom 1s ease-out;
+    -o-transition: border-bottom 1s ease-out;
+    transition: border-bottom 1s ease-out;
+}
+
+.nav li a:hover, .nav li a:focus {
+	text-decoration: none;
+	border-bottom: 2px solid #FF6666;
+	
+}
+
 #head {
 	padding: 20px;
 }
