--- a/main.css
+++ b/main.css
@@ -53,3 +53,12 @@ img {
 	text-transform: uppercase;
 	letter-spacing: 6px;
 }
+
+
+
+
+#allBooks {
+	color: black;
+	text-transform: lowercase;
+	text-decoration: none;
+}
