--- a/main.css
+++ b/main.css
@@ -1,12 +1,15 @@
 #main-image {
 	width: 80%;
 	display: inline-block;
-	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
-  	  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
-	  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
-	  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
-	  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+	padding-left: 0;
+	padding-right: 0;
+	/*background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+  	 /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+	 /* background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+	 /* background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+	 /* background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+	 /* background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+
 }
 
 img {
@@ -60,16 +63,45 @@ img {
 	width: 80%;
 }
 
-div#monthSection, div#daySection, div#yearSection {
+div#monthSection, div#daySection, div#yearSection, div#buttonSection {
 	display: inline-block;
 	padding: 20px;
 }
 
 select#month, select#day, select#year {
+	-webkit-appearance: none;
+  	-webkit-border-radius: 0px;
 	border-radius: 0;
 	border: 1px solid black;
+	padding: 8px 12px;
+	background-color: white;
+	letter-spacing: 4px;
 }
 
+#dateForm button {
+	-webkit-appearance: none;
+  	-webkit-border-radius: 0px;
+	border-radius: 0;
+	border: 1px solid #197575;
+	padding: 8px 12px;
+	background-color: #197575;
+	color: white;
+	letter-spacing: 4px;
+}
+
+#bestSellerResults {
+	width: 80%;
+}
+
+#bestSellerResults li {
+	list-style: none;
+	display: inline-block;
+	text-decoration: none;
+	color: black;
+	border: 1px solid black;
+	padding: 12px;
+	margin: 12px;
+}
 
 
 
