hide or toggle.. dun dun dunnnnnn

--- a/main.css
+++ b/main.css
@@ -110,7 +110,7 @@ select#month, select#day, select#year {
 	margin: auto;
 }
 
-#allBooks {
+.allBooks {
 	color: black;
 	text-transform: lowercase;
 	text-decoration: none;
