--- a/main.less
+++ b/main.less
@@ -1,12 +1,15 @@
 #main-image {
 	width: 80%;
 	display: inline-block;
-	background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
-  	  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
-	  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
-	  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
-	  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+	padding-left: 0;
+	padding-right: 0;
+	/*background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+  	 /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+	 /* background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+	 /* background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+	 /* background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+	 /* background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+
 }
 
 img {
@@ -28,17 +31,18 @@ img {
 	padding-top: 16px;
 	padding-bottom: 16px;
 	list-style: none;
-}
 
-.nav li a {
-	padding-bottom: 6px;
-	border-bottom: 2px solid #197575;
-	color: black;
-	letter-spacing: 2px;
-	-webkit-transition: border-bottom 1s ease-out;
-    -moz-transition: border-bottom 1s ease-out;
-    -o-transition: border-bottom 1s ease-out;
-    transition: border-bottom 1s ease-out;
+	a {
+		padding-bottom: 6px;
+		border-bottom: 2px solid #197575;
+		color: black;
+		display: block;
+		letter-spacing: 2px;
+		-webkit-transition: border-bottom 1s ease-out;
+	    -moz-transition: border-bottom 1s ease-out;
+	    -o-transition: border-bottom 1s ease-out;
+	    transition: border-bottom 1s ease-out;
+   	}
 }
 
 .nav li a:hover, .nav li a:focus {
@@ -52,4 +56,63 @@ img {
 	font-size: 26px;
 	text-transform: uppercase;
 	letter-spacing: 6px;
+}
+
+#dateForm {
+	display: block;
+	margin: auto;
+	width: 80%;
+}
+
+div#monthSection, div#daySection, div#yearSection, div#buttonSection {
+	display: inline-block;
+	padding: 20px;
+}
+
+select#month, select#day, select#year {
+	-webkit-appearance: none;
+  	-webkit-border-radius: 0px;
+	border-radius: 0;
+	border: 1px solid black;
+	padding: 8px 12px;
+	background-color: white;
+	letter-spacing: 4px;
+}
+
+#dateForm button {
+	-webkit-appearance: none;
+  	-webkit-border-radius: 0px;
+	border-radius: 0;
+	border: 1px solid #197575;
+	padding: 8px 12px;
+	background-color: #197575;
+	color: white;
+	letter-spacing: 4px;
+}
+
+#bestSellerResults {
+	width: 80%;
+}
+
+#bestSellerResults li {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	text-decoration: none;
+	color: black;
+	border: 1px solid black;
+	padding: 12px;
+	margin: 12px;
+}
+
+#goodReads {
+	display: block;
+	margin: auto;
+}
+
+.allBooks {
+	color: black;
+	text-transform: lowercase;
+	text-decoration: none;
+	padding: 8px;
 }
