--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ img {
   font-size: 26px;
   text-transform: uppercase;
   letter-spacing: 6px;
+  color: #197575;
 }
 #dateForm {
   display: block;
