--- a/main.less
+++ b/main.less
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Tangerine:400,700);
+
 @main-green: #196675; /*#197575;*/
 @main-blue: #194775;
 
@@ -54,11 +56,12 @@ img {
 }
 
 #head {
-	padding: 20px;
-	font-size: 26px;
-	text-transform: uppercase;
+	font-family: 'Tangerine', cursive;
+	padding: 4px 16px;
+	font-size: 66px;
 	letter-spacing: 6px;
 	color: @main-blue;
+	line-height: 1.2em;
 }
 
 @import "dropdowns";
